services/eks/lb/alb/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: sample-namespace
  name: sample-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: sample-app
